add template password_reset_complete.html.html

--- a/account/templates/registration/password_reset_complete.html
+++ b/account/templates/registration/password_reset_complete.html
@@ -1,7 +1,48 @@
-{% extends "base.html" %}
-{% block title %}Password reset{% endblock %}
-{% block body %}
- <h1>Password set</h1>
- <p>Your password has been set.
- You can <a href="{% url 'login' %}">log in now</a></p>
-{% endblock %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Сброс пароля</title>
+    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %} " rel="stylesheet" type="text/css">
+    <link
+            href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+            rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="{% static 'css/sb-admin-2.min.css' %}" rel="stylesheet">
+
+
+<body class="bg-gradient-primary">
+
+<div class="container">
+    <div class="col-xl-12 col-lg-1 col-md-1">
+        <div class="card o-hidden border-0 shadow-lg my-5">
+            <!--            <div class="card-body p-0">-->
+            <div class="row">
+                <!--                    <div class="col-lg-6">-->
+                <div class="p-5">
+                    <div class="text-center">
+
+
+                        {% block title %}Пароль изменен{% endblock %}
+                        {% block body %}
+                        <h1>Пароль изменен</h1>
+                        <p>Ваш пароль был успешно изменен.
+                            Теперь вы можете <a href="{% url 'login' %}">Войти</a></p>
+                        {% endblock %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+</html>
