--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -25,7 +25,8 @@
     {% load crispy_forms_tags %}
 
     <title>{% block title %}Сброс забытого пароля{% endblock %}</title>
-    {% block body %}
+</head>
+{% block body %}
 
 <body class="bg-gradient-primary">
 
