remane order_link TO order_archive_link

--- a/orders/templates/mail/mail_order_for_typografyl.html
+++ b/orders/templates/mail/mail_order_for_typografyl.html
@@ -789,7 +789,7 @@ display: inline !important;
                                                                 <![endif]-->
                                                                 <!--[if !mso]>
                                                                 <!---->
-                                                                <a href={{order_link}}
+                                                                <a href={{order_archive_link}}
                                                                    style="line-height: 16px; font-size: 16px !important; display: inline-block; border-radius: 0px; -webkit-border-radius: 0px; -moz-border-radius: 0px; color: #ffffff; text-decoration: none; font-weight: bold; font-family: Arial, sans-serif; text-align: center; height: 100%; width: auto; background: #c62334 repeat center center; padding: 11px 20px;">Скачать
                                                                 </a>
 
