--- a/orders/templates/mail/mail_order_for_typografyl.html
+++ b/orders/templates/mail/mail_order_for_typografyl.html
@@ -798,7 +798,7 @@ display: inline !important;
                                                                     в работу
                                                                 </a>
 
-                                                                <a href={{confirm_status_complite}}
+                                                                <a href={{confirm_status_complete}}
                                                                 style="line-height: 16px; font-size: 16px !important; display: inline-block; border-radius: 0px; -webkit-border-radius: 0px; -moz-border-radius: 0px; color: #ffffff; text-decoration: none; font-weight: bold; font-family: Arial, sans-serif; text-align: center; height: 100%; width: auto; background: #00b561 repeat center center; padding: 11px 20px;">Заказ готов
                                                                  
                                                              </a>
