all meters template index.html

--- a/files/templates/index.html
+++ b/files/templates/index.html
@@ -30,7 +30,7 @@
                     <td><a>{% load thumbnail %} <img src="{% thumbnail product.images 100x0 %}" class="image-detail"></a></td>
                     <td>{{ product.material }}</td>
                     <td>{{ product.quantity }} шт.</td>
-                    <td>{{ product.width }} х {{ product.length }} см.</td>
+                    <td>{{ product.width }} х {{ product.length }} м</td>
                     <td>{{ product.FinishWork }}</td>
                     <td>{{ product.price }} руб.</td>
                     <td>{{ product.status_product }}</td>
