--- a/files/templates/files/templates_reds.html
+++ b/files/templates/files/templates_reds.html
@@ -603,9 +603,10 @@
 
         <div class="col-lg-10 offset-lg-1 col-12">
             <div class="article mb-5">
-                <a href="http://91.202.25.116/files/calculator_interier_print_out/" rel="nofollow">Калькулятор Интерьерной печати |</a>
-                <a href="http://91.202.25.116/files/calculator_large_print_out" rel="nofollow">Калькулятор Широкоформатной печати | </a>
-                <a href="http://91.202.25.116/files/calculator_uv_print_out/" rel="nofollow">Калькулятор UV-печати</a>
+                <a href="/files/calculator_interior_print/" rel="nofollow">Калькулятор Интерьерной печати |</a>
+                <a href="/files/calculator_large_print_out" rel="nofollow">Калькулятор Широкоформатной печати | </a>
+                <a href="/files/calculator_uv_print_out/" rel="nofollow">Калькулятор UV-печати |</a>
+                <a href="/files/calculator_uv_print_out/" rel="nofollow">Калькулятор Чистый материал</a>
 
                 {% block content %}
 
