--- a/files/templates/files/templates_reds.html
+++ b/files/templates/files/templates_reds.html
@@ -606,7 +606,7 @@
                 <a href="/files/calculator_interior_print/" rel="nofollow">Калькулятор Интерьерной печати |</a>
                 <a href="/files/calculator_large_print_out" rel="nofollow">Калькулятор Широкоформатной печати | </a>
                 <a href="/files/calculator_uv_print_out/" rel="nofollow">Калькулятор UV-печати |</a>
-                <a href="/files/calculator_blank_material.html" rel="nofollow">Калькулятор Чистый материал</a>
+                <a href="/files/calculator_blank/" rel="nofollow">Калькулятор Чистый материал</a>
 
                 {% block content %}
 
