--- a/files/templates/files/templates_reds.html
+++ b/files/templates/files/templates_reds.html
@@ -602,7 +602,7 @@
     <div class="row">
 
         <div class="col-lg-10 offset-lg-1 col-12">
-            <div class="article mb-5">
+            <div class="article mb-5 text-center">
                 <a href="/files/calculator_interior_print/" rel="nofollow">Калькулятор Интерьерной печати |</a>
                 <a href="/files/calculator_large_print_out" rel="nofollow">Калькулятор Широкоформатной печати | </a>
                 <a href="/files/calculator_uv_print_out/" rel="nofollow">Калькулятор UV-печати |</a>
