templates_reds.html

--- a/files/templates/files/templates_reds.html
+++ b/files/templates/files/templates_reds.html
@@ -607,6 +607,7 @@
                 <a href="/files/calculator_large_print_out" rel="nofollow">Калькулятор Широкоформатной печати | </a>
                 <a href="/files/calculator_uv_print_out/" rel="nofollow">Калькулятор UV-печати |</a>
                 <a href="/files/calculator_blank/" rel="nofollow">Калькулятор Чистый материал</a>
+            <div class="article mb-5">
 
                 {% block content %}
 
