--- a/files/templates/files/confirm_order_to_work.html
+++ b/files/templates/files/confirm_order_to_work.html
@@ -10,9 +10,8 @@
 
 <h5 style="text-align: center; ">Заказ изменил статус на "В работе"</h5>
 
-{% if items_in_order.count > 0  %}
 
-<h5> Файлы в заказе: </h5>
+<h5> Файлы заказа № {{order_id}}: </h5>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
@@ -31,13 +30,11 @@
                 <td><a>{% load thumbnail %} <img src="{% thumbnail items.product.images 100x0 %}"
                                                  class="image-detail"></a></td>
                 <td>{{ items.product.material }}</td>
-                <td>{{ items.product.width }}x{{ items.product.length }} см.</td>
+                <td>{{ items.product.width }}x{{ items.product.length }}м</td>
                 <td>{{ items.product.quantity }} шт.</td>
                 <td>{{ items.product.FinishWork }}</td>
-                <td></td>
 
 
-                {% endif %}
             </tr>
             {% endfor %}
             </tbody>
