--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -78,7 +78,7 @@
             <tr>
                 <td><a>{% load thumbnail %} <img src="{% thumbnail item.images 100x0 %}" class="image-detail"></a></td>
                 <td>{{ item.material }}</td>
-                <td>{{ item.width }}x{{ item.length }} см.</td>
+                <td>{{ item.width }}x{{ item.length }} м</td>
                 <td>{{ item.quantity }} шт.</td>
                 <td>{{ item.FinishWork }}</td>
                 <td>{{ item.price }}</td>
