--- a/delivery_in_bus/templates/delivery_in_bus/view_orders_for_courier.html
+++ b/delivery_in_bus/templates/delivery_in_bus/view_orders_for_courier.html
@@ -4,7 +4,7 @@
 
 
 {% if object_list.count > 0 %}
-<h2>Заказы готовые к отправке: </h2>
+<h2>Заказы готовые к отправке Автобусом: </h2>
 <div class="row">
     <div class="col-md-12">
         <table class="table table-striped table-hover">
