--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -1,6 +1,104 @@
 {% extends 'base.html'%}
 <title>{% block title %} {{current_order}} {% endblock %}</title>
 {% block body %}
+
+{% if request.user.role == 'COURIER' %}
+<h1>Отправить автобусом {{current_order}}</h1>
+<hr>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Дата</th>
+                <th>Статус</th>
+                <th>Доставка</th>
+            </thead>
+            <tbody>
+
+            <tr>
+                <td>{{ Orders.created }}</td>
+
+                <td>{% if Orders.status.id == 3 %}
+                    <div class="mb-2">
+                        <code>В работе</code>
+                    </div>
+                    {% elif Orders.status.id == 5 %}
+                    <div class="text-success mb-2">Готов
+                    </div>
+                    {% elif Orders.status.id == 1 %}
+                    <div class="text-warning mb-2">Готовится
+                    </div>
+                    {% elif Orders.status.id == 2 %}
+                    <div class="text-primary mb-2">Оформлен
+                    </div>
+
+                    {% endif %}
+                </td>
+                <td>{{ Orders.delivery }}</td>
+                <td>
+                </td>
+            </tr>
+        </table>
+        </tbody>
+    </div>
+</div>
+
+
+{% if items_in_order.count > 0  %}
+
+<h5> Файлы в заказе: </h5>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>№</th>
+                <th>Картинка</th>
+                <th>Материал</th>
+                <th>Размер</th>
+                <th>Количество</th>
+                <th>Финишная обработка</th>
+            </thead>
+            <tbody>
+            {% for items in items_in_order %}
+            <tr>
+                <td>{{ items.product.id }}</td>
+                <td><a>{% load thumbnail %} <img src="{% thumbnail items.product.images 100x0 %}"
+                                                 class="image-detail"></a></td>
+                <td>{{ items.product.material }}</td>
+                <td>{{ items.product.width }}x{{ items.product.length }} м</td>
+                <td>{{ items.product.quantity }} шт.</td>
+                <td>{{ items.product.FinishWork }}</td>
+
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    {% if current_order.status.id == 1 %}
+    <td>
+        <button type="submit" class="btn btn-success"
+                onClick="location.href='{% url 'orders:order_pay' Orders.id %}'">Оформить заказ
+        </button>
+    </td>
+    {% else %}
+    <!--                    <td><a href="/media/{{Orders.order_pdf_file}}">Скачать счет</a></td>-->
+    {% if Orders.paid == False %}
+
+    <td>
+        <button type="submit" class="btn btn-primary"
+                onClick="location.href='{{Orders.pay_link}}'">Оплатить картой
+        </button>
+    </td>
+
+    {% endif %}
+
+
+    {% endif %}
+</div>
+{% endif %}
+{% else %}
 <h1>{{current_order}}</h1>
 <hr>
 <div class="row">
@@ -106,6 +204,7 @@
         <table class="table table-striped table-hover">
             <thead>
             <tr>
+                <th>№</th>
                 <th>Картинка</th>
                 <th>Материал</th>
                 <th>Размер</th>
@@ -115,8 +214,8 @@
             </thead>
             <tbody>
             {% for items in items_in_order %}
-
             <tr>
+                <td>{{ items.product.id }}</td>
                 <td><a>{% load thumbnail %} <img src="{% thumbnail items.product.images 100x0 %}"
                                                  class="image-detail"></a></td>
                 <td>{{ items.product.material }}</td>
@@ -124,7 +223,7 @@
                 <td>{{ items.product.quantity }} шт.</td>
                 <td>{{ items.product.FinishWork }}</td>
                 <td>{{ items.product.price }} руб.</td>
-                    {% if Orders.status.id == 1 %}
+                {% if Orders.status.id == 1 %}
                 <td><a href="/orders/del_item_in_order/{{order_id}}/{{items.id}}">Удалить файл</a></td>
 
 
@@ -159,5 +258,6 @@
 
     {% endif %}
 </div>
+{% endif %}
 {% endif %}
 {% endblock %}
