add model OrdersDeliveryBus

--- a/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
+++ b/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
@@ -1,33 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html'%}
+<title>{% block title %} {{current_order}} {% endblock %}</title>
+{% block body %}
 
-Инструкция для курьера.
-При получении ссылки на продукцию которую нужно собрать для отправки.
-1. Проверить готовность продукции у ведущего заказ менеджера.
-2. Аккуратно собрать и упаковать продукцию.
+<h1>Инструкция для курьера</h1>
+<h5>При получении уведомления о необходимости доставки</h5>
 
-(Инструкция по сборке и упаковке заказа)
-1. Баннерная ткань должна быть свернута в "конверт" (ширина 30-40 см, длинной 0,7 - 1 м).
-Материал должен быть сложен так что бы не было неровностей и загибов. Не допускается последний сгиб меньше 40 см.
-2. Баннерная ткань укладывается в стопку не более 25 см.
-3. Стопка фиксируется стрейч-пленкой или б/у баннером, полностью закрывая материал со всех сторон.
-4. Стрейч дополнительно фиксируется скотчем. (Не допускается болтание кусков стрейч-пленки на продукции)
-5. Рулонный материал должен быть намотан на тубу.
-6. Рулонный материал упаковывается стрейч-пленкой или б/у баннером
+<ol>
+    <li>Проверить готовность продукции у ведущего заказ менеджера.</li>
+    <li>Аккуратно собрать и упаковать продукцию.</li>
+</ol>
+<hr>
+<h3>Инструкция по сборке и упаковке заказа</h3>
+<ol>
+    <li>
+        Баннерная ткань должна быть свернута в "конверт" (ширина 30-40 см, длинной 0,7 - 1 м).
+    </li>
 
-3. Если продукция доставляется рейсовым автобусом. (только в сторону Москвы)
-4. В месте отправки автобуса быть не менее чем за 25 минут до отправки автобуса.
-5. Погрузить продукцию в автобус.
-6. Получить номер телефона водителя.
-7. Записать (сфотографировать) номер автобуса
-8. Сфотографировать погруженную продукцию в автобусе.
-8. Загрузить данные в форму отправки.
-9. Отправить форму, дождаться подтверждения что форма отправлена.
+    <li>Материал должен быть сложен так что бы не было неровностей и загибов. Не допускается последний сгиб меньше 40
+        см.
+    </li>
+    <li>Баннерная ткань укладывается в стопку не более 25 см.</li>
+    <li>Стопка фиксируется стрейч-пленкой или б/у баннером, полностью закрывая материал со всех сторон.</li>
+    <li>Стрейч дополнительно фиксируется скотчем. (Не допускается болтание кусков стрейч-пленки на продукции)</li>
+    <li>Рулонный материал должен быть намотан на тубу.</li>
+    <li>Рулонный материал упаковывается стрейч-пленкой или б/у баннером</li>
+</ol>
+<h5>Время отправки автобусов: 21-15 и 23-00</h5>
+<h5>Место отправки автобусов: ЖД Вокзал 1</h5>
+
+<h5>Отправка продукции </h5>
+<ol>
+    <li>
+        В месте отправки автобуса быть не менее чем за 25 минут до отправки автобуса.
+    </li>
+    <li>Погрузить продукцию в автобус.</li>
+    <li>Получить номер телефона водителя.</li>
+    <li>Записать (сфотографировать) номер автобуса</li>
+    <li>Сфотографировать погруженную продукцию в автобусе.</li>
+    <li>Загрузить данные в форму отправки.</li>
+    <li>Отправить форму, дождаться подтверждения что форма отправлена.</li>
+
+
+</ol>
+
 
 Добавить форму регистрации для новых подрядчиков.
 Форма регистрации для курьеров.
@@ -52,8 +67,7 @@
 7. Дата создания записи
 8. Комментарии
 
-Изменить шаблон если пользователь является курьером он видит только готовые заказы у которых в доставке
-стоит доставка автобусом.
+
 Нажимая на кнопку в работе. Он меняет состояние заказа на доставка до автобуса.
 Упаковывает заказ и везет к автобусу. После того как заказ погрузил делает три фото:
 1. Фото заказа в автобусе
@@ -65,5 +79,4 @@
 Заказчику отправляется уведомление о заказе с тремя фотографиями.
 Курьеру за успешную доставку начисляется выплата. Баланс:
 
-</body>
-</html>
+{% endblock %}
