edit  model OrdersDeliveryBus

--- a/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
+++ b/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
@@ -28,55 +28,20 @@
 <h5>Время отправки автобусов: 21-15 и 23-00</h5>
 <h5>Место отправки автобусов: ЖД Вокзал 1</h5>
 
-<h5>Отправка продукции </h5>
+<h5>Отправка продукции:</h5>
 <ol>
-    <li>
+    <p>
         В месте отправки автобуса быть не менее чем за 25 минут до отправки автобуса.
-    </li>
+    </p>
     <li>Погрузить продукцию в автобус.</li>
-    <li>Получить номер телефона водителя.</li>
-    <li>Записать (сфотографировать) номер автобуса</li>
-    <li>Сфотографировать погруженную продукцию в автобусе.</li>
-    <li>Загрузить данные в форму отправки.</li>
-    <li>Отправить форму, дождаться подтверждения что форма отправлена.</li>
+    <li>Сфотографировать и загрузить погруженную продукцию в автобусе.</li>
+    <li>Сфотографировать и загрузить номер телефона водителя.</li>
+    <li>Сфотографировать и загрузить номер автобуса</li>
+    <li>Нажать кнопку отправить продукцию.</li>
+    <li>Если все прогрузилось успешно вы увидите сообщение об этом на экране</li>
 
 
 </ol>
 
-
-Добавить форму регистрации для новых подрядчиков.
-Форма регистрации для курьеров.
-
-
-Страница для курьера:
-1. Готовые заказы для отгрузки
-(после того как менеджер поставит заказ в режим готов, заказ появляется  на странице Курьера "Заказы готовые к отгрузке)
-У курьера на странице заказ появляется только тогда когда выбрана доставка автобусом и пользователь принадлежит курьерам.
-1. Там номер заказа
-2. Детальная Информация о заказе
-3. Дата отгрузки заказа (для Москвы на следующий день)
-4. Кнопка заказ в доставке (как курьер приступил к выполнению заказа, он нажимает кнопку заказ в доставке и меняет
-статус заказа)
-
-Поля формы:
-1. Номер заказа
-2. Имя курьера заносящий
-3. Фото продукции в автобусе
-4. Поле фото телефона водителя
-5. Фото автобуса с номером
-7. Дата создания записи
-8. Комментарии
-
-
-Нажимая на кнопку в работе. Он меняет состояние заказа на доставка до автобуса.
-Упаковывает заказ и везет к автобусу. После того как заказ погрузил делает три фото:
-1. Фото заказа в автобусе
-2. Телефон водителя
-3. Номер автобуса
-Загружает фото на сайт.
-Указывает количество мест.
-Заказ меняет статус на "в доставке". (пока заказчик не нажмет кнопку получен).
-Заказчику отправляется уведомление о заказе с тремя фотографиями.
-Курьеру за успешную доставку начисляется выплата. Баланс:
 
 {% endblock %}
