--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -82,6 +82,11 @@
                     onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Отгрузить заказ
             </button>
         </td>
+<td>
+            <button type="submit" class="btn btn-success"
+                    onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Начать отгрузку
+            </button>
+        </td>
 
     </div>
 
