add coordinates in instructions

--- a/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
+++ b/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
@@ -27,7 +27,8 @@
 </ol>
 <h5>Время отправки автобусов: 21-15 и 23-00</h5>
 <h5>Место отправки автобусов: ЖД Вокзал 1</h5>
-
+<a href="https://goo.gl/maps/DvRRDRJtStvFBkmw9">Место посадки в автобус на карте</a>
+<hr>
 <h5>Отправка продукции:</h5>
 <ol>
     <p>
