add instruction packing

--- a/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
+++ b/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
@@ -10,21 +10,7 @@
     <li>Аккуратно собрать и упаковать продукцию.</li>
 </ol>
 <hr>
-<h3>Инструкция по сборке и упаковке заказа</h3>
-<ol>
-    <li>
-        Баннерная ткань должна быть свернута в "конверт" (ширина 30-40 см, длинной 0,7 - 1 м).
-    </li>
 
-    <li>Материал должен быть сложен так что бы не было неровностей и загибов. Не допускается последний сгиб меньше 40
-        см.
-    </li>
-    <li>Баннерная ткань укладывается в стопку не более 25 см.</li>
-    <li>Стопка фиксируется стрейч-пленкой или б/у баннером, полностью закрывая материал со всех сторон.</li>
-    <li>Стрейч дополнительно фиксируется скотчем. (Не допускается болтание кусков стрейч-пленки на продукции)</li>
-    <li>Рулонный материал должен быть намотан на тубу.</li>
-    <li>Рулонный материал упаковывается стрейч-пленкой или б/у баннером</li>
-</ol>
 <h5>Время отправки автобусов: 21-15 и 23-00</h5>
 <h5>Место отправки автобусов: ЖД Вокзал 1</h5>
 <a href="https://goo.gl/maps/DvRRDRJtStvFBkmw9">Место посадки в автобус на Google карте</a>
@@ -45,5 +31,10 @@
 
 </ol>
 
+<td>
+            <button type="submit" class="btn btn-success"
+                    onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Начать отгрузку
+            </button>
+        </td>
 
 {% endblock %}
