--- a/orders/templates/add_files_in_order.html
+++ b/orders/templates/add_files_in_order.html
@@ -77,16 +77,8 @@
 
             </tbody>
         </table>
-        <td>
             <button type="submit" class="btn btn-success"
-                    onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Отгрузить заказ
-            </button>
-        </td>
-<td>
-            <button type="submit" class="btn btn-success"
-                    onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Начать отгрузку
-            </button>
-        </td>
+                    onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Курьер забрал заказ            </button>
 
     </div>
 
