--- a/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
+++ b/delivery_in_bus/templates/delivery_in_bus/courier_instruction.html
@@ -10,11 +10,11 @@
     <li>Аккуратно собрать и упаковать продукцию.</li>
 </ol>
 <hr>
-
 <h5>Время отправки автобусов: 21-15 и 23-00</h5>
 <h5>Место отправки автобусов: ЖД Вокзал 1</h5>
 <a href="https://goo.gl/maps/DvRRDRJtStvFBkmw9">Место посадки в автобус на Google карте</a>
-<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab7246f8643d2a63fcb03b8c43382b0bf43d8ee9b4f144742a5afdb55d44635cf&amp;width=100%25&amp;height=416&amp;lang=ru_RU&amp;scroll=true"></script>
+<script type="text/javascript" charset="utf-8" async
+        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab7246f8643d2a63fcb03b8c43382b0bf43d8ee9b4f144742a5afdb55d44635cf&amp;width=100%25&amp;height=416&amp;lang=ru_RU&amp;scroll=true"></script>
 <hr>
 <h5>Отправка продукции:</h5>
 <ol>
@@ -31,10 +31,7 @@
 
 </ol>
 
-<td>
-            <button type="submit" class="btn btn-success"
-                    onClick="location.href='{% url 'delivery_in_bus:instruction_for_courier' Orders.id %}'">Начать отгрузку
-            </button>
-        </td>
+<td><a href="{% url 'delivery_in_bus:load_img' order_id %}">Загрузить фото продукции</a></td>
+
 
 {% endblock %}
