--- a/delivery_in_bus/templates/delivery_in_bus/view_img_phone.html
+++ b/delivery_in_bus/templates/delivery_in_bus/view_img_phone.html
@@ -3,24 +3,23 @@
 {% block body %}
 
 <h1>{{title}}</h1>
-
 <table>
     <tr>
         <td>Фото продукции</td>
         <td>Фото Телефона водителя</td>
     </tr>
     <tr>
-        <td><a>{% load thumbnail %} <img src="{% thumbnail item.img_production 400x0 %}" class="image-detail"></a></td>
-        <td><a>{% load thumbnail %} <img src="{% thumbnail item.img_phone 400x0 %}" class="image-detail"></a></td>
 
+
+<td><a>{% load thumbnail %} <img src="{% thumbnail item.img_production 400x0 %}" class="image-detail"></a></td>
+<td><a>{% load thumbnail %} <img src="{% thumbnail item.img_phone 400x0 %}" class="image-detail"></a></td>
     </tr>
 </table>
 
 
 
-<form action="{% url 'delivery_in_bus:load_img_phone' order_id %}" method='post' enctype="multipart/form-data">
-    {% csrf_token %}
-
+<form action="{% url 'delivery_in_bus:load_img_number' order_id %}" method='post' enctype="multipart/form-data">
+{% csrf_token %}
 {{ form.as_p }}
     <button type="submit">Добавить фото номера автобуса</button>
 
